第二次提交

--- a/src/detail.html
+++ b/src/detail.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="sass/footer.css">
     <link rel="stylesheet" href="sass/header-nav.css">
     <link href="../src/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <script src="js/require.js" defer async="true" data-main="js/main.js"></script>
 </head>
 
 <body>
@@ -136,37 +135,66 @@
                     <a href="">多门</a>>
                     <a href="">晶弘多门冰箱 变频302L 风冷无霜 抗菌净味 BCD-302WPQG/朗玉金</a>
                 </div>
-                <div class="auto_left">
-                    <div class="fangda">
-                        <div class="fangdatu">
-                            <img src="" alt="">
-                        </div>
-
+                <div class="wrap">
+                    <div id="spic">
+                        <img src="" alt="" id="smallpic">
+                        <div id="sf"></div>
                     </div>
-                    <div class="auto_xiao">
-
-                        <div class="auto_xiao_tu">
+                    <div id="bf">
+                        <img src="" alt="" id="bpic">
+                    </div>
+                    <div id="ulist">
+                        <a href="javascript:;" id="left">&lt;</a>
+                        <div id="list">
                             <ul>
-                                <li>
-                                    <img src="" alt="">
-                                </li>
-                                <li>
-                                    <img src="" alt="">
-                                </li>
-                                <li>
-                                    <img src="" alt="">
-                                </li>
-                                <li>
-                                    <img src="" alt="">
-                                </li>
+
                             </ul>
                         </div>
-                    </div>
-                    <div class="fangdahou">
-                        <img src="" alt="">
+                        <a href="javascript:;" id="right">&gt;</a>
                     </div>
                 </div>
 
+                <div class="goodsinfo-word">
+                    <div class="p-name">
+                        <a class="loadtitle" href="##"></a>
+                    </div>
+                    <div class="p-price"><strong><em>￥</em><i class="loadpcp"></i></strong></div>
+                    <div class="p-btn">
+                        <input type="text" id="count" value="1" />
+                        <a href="javascript:;">加入购物车</a>
+
+                    </div>
+                </div>
+
+
+                <div class="auto_right">
+                    <h3>商家信息</h3>
+                    <ul>
+                        <li class="shang">
+                            <div class="pj">
+                                <ul>
+                                    <li>服务评价<i class="iconfont iconc">&#xe65f;&#xe65f;&#xe65f;&#xe65f;&#xe65f;</i><span>4.9分</span></li>
+                                    <li>描述相符<i class="iconfont iconc">&#xe65f;&#xe65f;&#xe65f;&#xe65f;&#xe65f;</i><span>4.9分</span></li>
+                                    <li>发货速度<i class="iconfont iconc">&#xe65f;&#xe65f;&#xe65f;&#xe65f;&#xe65f;</i><span>4.9分</span></li>
+                                    <li>态度服务<i class="iconfont iconc">&#xe65f;&#xe65f;&#xe65f;&#xe65f;&#xe65f;</i><span>4.9分</span></li>
+                                </ul>
+
+                            </div>
+                        </li>
+                        <li class="zhong">
+                            <img src="images/bb5b9d0b-8cfc-4d1c-a41f-83db33795003.jpg" alt="">
+                        </li>
+                        <li class="left">店铺名称：</li>
+                        <li class="right">格力董明珠店</li>
+                        <li class="left">公司名称：</li>
+                        <li class="right">格力电子商务有限公司</li>
+                        <li class="left">所&nbsp;在&nbsp;地：</li>
+                        <li class="right">广东省珠海市香洲区金鸡西路格力电器</li>
+                        <li class="left">客服电话：</li>
+                        <li class="right phone">4008365315转7号键</li>
+                        <li class="xia"><span class="l1">进入卖家店铺</span><span class="l2"><i class="iconfont">&#xe65f;</i>收藏店铺</span></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
@@ -217,5 +245,7 @@
         </div>
     </div>
 </body>
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script src="script/detail.js"></script>
 
 </html>
