--- a/src/detail.html
+++ b/src/detail.html
@@ -72,7 +72,7 @@
         <!--购物车-->
         <div class="header-shopcar">
             <div class="shopcar-btn">
-                <i class="iconfont iconshopcar">&#xe605;</i><a href="" class="shopcar">购物车 （<span id="cartQuantity">0</span>）</a>
+                <i class="iconfont iconshopcar">&#xe605;</i><a href="cart.html" class="shopcar">购物车 （<span id="cartQuantity">0</span>）</a>
             </div>
         </div>
     </div>
@@ -246,6 +246,7 @@
     </div>
 </body>
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery-cookie/1.0/jquery.cookie.min.js"></script>
 <script src="script/detail.js"></script>
 
 </html>
