--- a/src/login.html
+++ b/src/login.html
@@ -13,94 +13,115 @@
     <link rel="stylesheet" href="sass/footer.css">
     <link rel="stylesheet" href="sass/header-dlzc.css">
 </head>
-<!--头部-->
-<div class="header">
-    <div class="logo">
-        <img src="images/86f141a8-3876-4568-86f0-3c343430775c.gif" alt="">
-    </div>
-    <div class="rightimg">
-        <p class="hy"><i>|</i>欢迎登录</p>
-    </div>
-</div>
-<!--主体-->
-<div class="main">
-    <div class="register">
-        <div class="register-box">
-            <form id="login_form" method="post">
-                <ul>
-                    <li>
-                        <input type="text" name="username" maxlength="30" autocomplete="off" id="userid" class="input" placeholder="手机号/用户名/邮箱">
-                        <span class="fontuser"><i class="iconfont iconuser">&#xe646;</i></span>
-                        <span class="msg_span"></span>
-                    </li>
-                    <li class="mima">
-                        <input type="password" name="password" autocomplete="off" id="password" class="password" placeholder="登录密码" loadmsg="登录中" maxlength="39">
-                        <span class="fontuser"><i class="iconfont iconuser">&#xe61a;</i></span>
-                        <span class="msg_span"></span>
-                    </li>
-                    <li>
-                        <button type="button" class="button" id="btn_submit" loadmsg="登录中">登 录</button>
-                    </li>
-                    <li>
-                        <i class="mf"><a href="registry.html">免费注册</a></i><i class="wj"><a href="">忘记密码？</a></i>
-                    </li>
-                </ul>
-            </form>
-        </div>
-        <div class="register-pic">
-            <img src="images/login_pic1.png" alt="">
-        </div>
-    </div>
-</div>
-<!--售后-->
-<div class="footer">
-    <ul>
-        <li>
-            <dl><dt>购物指南</dt>
-                <dd>格力境外购买须知</dd>
-                <dd>免责声明</dd>
-            </dl>
-        </li>
-        <li>
-            <dl><dt>售后服务</dt>
-                <dd>服务时效</dd>
-                <dd>安装/维修</dd>
-            </dl>
-        </li>
-        <li>
-            <dl><dt>常见问题</dt>
-                <dd>空调内机条码获取方法</dd>
-                <dd>订单常见问题说明</dd>
-                <dd>空调常见问题说明</dd>
-                <dd>冰箱常见问题说明</dd>
-            </dl>
-        </li>
-        <li>
-            <dl><dt>联系我们</dt>
-                <dd>联系我们</dd>
-            </dl>
-        </li>
-        <li>
-            <dl><dt>服务查询</dt>
-                <dd>配送服务查询</dd>
-            </dl>
-        </li>
-        <li>
-            <dl><dt>商城支付</dt>
-                <dd>商城支付</dd>
-            </dl>
-        </li>
-    </ul>
-    <div class="banquan">
-        <div class="bq">
-            <div>珠海格力电器股份有限公司版权所有 粤ICP备05006515号</div>
-            <div class="shangbiao"><img src="images/footer_04.png" alt=""></div>
-        </div>
-    </div>
-</div>
+
 
 <body>
-
+    <!--头部-->
+    <div class="header">
+        <div class="logo">
+            <img src="images/86f141a8-3876-4568-86f0-3c343430775c.gif" alt="">
+        </div>
+        <div class="rightimg">
+            <p class="hy"><i>|</i>欢迎登录</p>
+        </div>
+    </div>
+    <!--主体-->
+    <div class="main">
+        <div class="register">
+            <div class="register-box">
+                <form id="login_form" method="post">
+                    <ul>
+                        <li>
+                            <input type="text" name="username" maxlength="30" autocomplete="off" id="userid" class="input" placeholder="手机号/用户名/邮箱">
+                            <span class="fontuser"><i class="iconfont iconuser">&#xe646;</i></span>
+                            <span class="msg_span"></span>
+                        </li>
+                        <li class="mima">
+                            <input type="password" name="password" autocomplete="off" id="password" class="password" placeholder="登录密码" loadmsg="登录中" maxlength="39">
+                            <span class="fontuser"><i class="iconfont iconuser">&#xe61a;</i></span>
+                            <span class="msg_span"></span>
+                        </li>
+                        <li>
+                            <button type="button" class="button" id="btn_submit" loadmsg="登录中">登 录</button>
+                        </li>
+                        <li>
+                            <i class="mf"><a href="registry.html">免费注册</a></i><i class="wj"><a href="">忘记密码？</a></i>
+                        </li>
+                    </ul>
+                </form>
+            </div>
+            <div class="register-pic">
+                <img src="images/login_pic1.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!--售后-->
+    <div class="footer">
+        <ul>
+            <li>
+                <dl><dt>购物指南</dt>
+                    <dd>格力境外购买须知</dd>
+                    <dd>免责声明</dd>
+                </dl>
+            </li>
+            <li>
+                <dl><dt>售后服务</dt>
+                    <dd>服务时效</dd>
+                    <dd>安装/维修</dd>
+                </dl>
+            </li>
+            <li>
+                <dl><dt>常见问题</dt>
+                    <dd>空调内机条码获取方法</dd>
+                    <dd>订单常见问题说明</dd>
+                    <dd>空调常见问题说明</dd>
+                    <dd>冰箱常见问题说明</dd>
+                </dl>
+            </li>
+            <li>
+                <dl><dt>联系我们</dt>
+                    <dd>联系我们</dd>
+                </dl>
+            </li>
+            <li>
+                <dl><dt>服务查询</dt>
+                    <dd>配送服务查询</dd>
+                </dl>
+            </li>
+            <li>
+                <dl><dt>商城支付</dt>
+                    <dd>商城支付</dd>
+                </dl>
+            </li>
+        </ul>
+        <div class="banquan">
+            <div class="bq">
+                <div>珠海格力电器股份有限公司版权所有 粤ICP备05006515号</div>
+                <div class="shangbiao"><img src="images/footer_04.png" alt=""></div>
+            </div>
+        </div>
+    </div>
 </body>
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script src="script/login.js"></script>
+<script>
+    var oInput = document.querySelectorAll('input');
+    var username = document.querySelector('.input');
+    var password = document.querySelector('.password');
+    var oB = document.querySelectorAll('.msg_span');
+
+    var userflag = true;
+    var passflag = true;
+    oInput.infocus = function() {
+        oInput.style.border = 'transparent';
+    }
+    password.onblur = function() {
+        if (this.value == '') {
+            oB[1].innerHTML = '密码不能为空';
+            oB[1].style.color = 'red';
+            passflag1 = false;
+        }
+    }
+</script>
 
 </html>
