最后一次提交

--- a/src/index1.html
+++ b/src/index1.html
@@ -54,7 +54,7 @@
     <div class="header">
         <!--logo-->
         <div class="header-logo">
-            <img src="images/86f141a8-3876-4568-86f0-3c343430775c.gif" title="格力董明珠店">
+            <img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/4/2/86f141a8-3876-4568-86f0-3c343430775c.gif" title="格力董明珠店">
         </div>
         <!--搜索框图标-->
         <div class="header-select">
@@ -153,10 +153,10 @@
             <p class="title-font">热销推荐</p>
             <div class="rx">
                 <ul>
-                    <li><img src="images/02ed8a06-f214-4676-84e0-f91e61474a0d (1).jpg" alt=""></li>
-                    <li><img src="images/cd6d7aa3-812a-4c2a-b56b-9c8803544e72.jpg" alt=""></li>
-                    <li><img src="images/4137c537-5d22-4552-ba15-5bbb954e2ea3.jpg" alt=""></li>
-                    <li><img src="images/2a6d1b7c-7ff7-4f65-81e0-6ecf0236123d.jpg" alt=""></li>
+                    <li><img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/02ed8a06-f214-4676-84e0-f91e61474a0d.jpg" alt=""></li>
+                    <li><img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/cd6d7aa3-812a-4c2a-b56b-9c8803544e72.jpg" alt=""></li>
+                    <li><img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/4137c537-5d22-4552-ba15-5bbb954e2ea3.jpg" alt=""></li>
+                    <li><img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/30/2a6d1b7c-7ff7-4f65-81e0-6ecf0236123d.jpg" alt=""></li>
                 </ul>
             </div>
         </div>
@@ -164,30 +164,30 @@
         <div class="title-font">每日精选</div>
         <div class="mrjx">
             <div class="jx1">
-                <a href=""><img src="images/a9ef3cfd-019c-4b9a-a91d-3bbe933d4148.jpg" alt="" title="总部精选01"></a>
+                <a href=""><img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/a9ef3cfd-019c-4b9a-a91d-3bbe933d4148.jpg" alt="" title="总部精选01"></a>
 
             </div>
             <div class="jx2">
                 <div class="top1">
-                    <a href=""><img src="images/2f43eed7-a7d4-49a5-bd5f-8ffe26f01321.jpg" alt="" title="总部精选02"></a>
+                    <a href=""><img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/2f43eed7-a7d4-49a5-bd5f-8ffe26f01321.jpg" alt="" title="总部精选02"></a>
 
                 </div>
                 <div class="bottom1">
-                    <a href=""><img src="images/df90ff21-6220-45be-9740-2e8d2f4ce2df.jpg" alt="" title="总部精选03"></a>
+                    <a href=""><img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/df90ff21-6220-45be-9740-2e8d2f4ce2df.jpg" alt="" title="总部精选03"></a>
 
                 </div>
                 <div class="bottom2">
-                    <a href=""><img src="images/75a6c760-31e1-4300-9180-75d4c74aefd6.jpg" alt="" title="总部精选04"></a>
+                    <a href=""><img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/75a6c760-31e1-4300-9180-75d4c74aefd6.jpg" alt="" title="总部精选04"></a>
 
                 </div>
             </div>
             <div class="jx3">
                 <div class="top1">
-                    <a href=""><img src="images/e59e37eb-4520-43b8-a49c-f4ad490f1c01.jpg" alt="" title="总部精选05"></a>
+                    <a href=""><img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/e59e37eb-4520-43b8-a49c-f4ad490f1c01.jpg" alt="" title="总部精选05"></a>
 
                 </div>
                 <div class="bottom1">
-                    <a href=""><img src="images/fa5b1e73-02ff-4527-b473-6a2aafe00139.jpg" alt="" title="总部精选06"></a>
+                    <a href=""><img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/fa5b1e73-02ff-4527-b473-6a2aafe00139.jpg" alt="" title="总部精选06"></a>
 
                 </div>
             </div>
@@ -210,12 +210,12 @@
                     </div>
                     <div class="floor_left">
                         <div class="cata">
-                            <img src="images/265d2766-d948-48a2-8f40-2bc3d3575b02.jpg" alt="">
+                            <img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/265d2766-d948-48a2-8f40-2bc3d3575b02.jpg" alt="">
                         </div>
                     </div>
                     <div class="floor_zhong">
                         <div class="cata">
-                            <img src="images/b5108bb9-e35a-4c93-908a-8ca1a552c0c7.jpg" alt="">
+                            <img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/b5108bb9-e35a-4c93-908a-8ca1a552c0c7.jpg" alt="">
                         </div>
 
                     </div>
@@ -246,12 +246,12 @@
                     </div>
                     <div class="floor_left">
                         <div class="cata">
-                            <img src="images/265d2766-d948-48a2-8f40-2bc3d3575b02.jpg" alt="">
+                            <img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/265d2766-d948-48a2-8f40-2bc3d3575b02.jpg" alt="">
                         </div>
                     </div>
                     <div class="floor_zhong">
                         <div class="cata">
-                            <img src="images/b5108bb9-e35a-4c93-908a-8ca1a552c0c7.jpg" alt="">
+                            <img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/b5108bb9-e35a-4c93-908a-8ca1a552c0c7.jpg" alt="">
                         </div>
 
                     </div>
@@ -283,12 +283,12 @@
                     </div>
                     <div class="floor_left">
                         <div class="cata">
-                            <img src="images/265d2766-d948-48a2-8f40-2bc3d3575b02.jpg" alt="">
+                            <img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/265d2766-d948-48a2-8f40-2bc3d3575b02.jpg" alt="">
                         </div>
                     </div>
                     <div class="floor_zhong">
                         <div class="cata">
-                            <img src="images/b5108bb9-e35a-4c93-908a-8ca1a552c0c7.jpg" alt="">
+                            <img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/b5108bb9-e35a-4c93-908a-8ca1a552c0c7.jpg" alt="">
                         </div>
 
                     </div>
@@ -320,12 +320,12 @@
                     </div>
                     <div class="floor_left">
                         <div class="cata">
-                            <img src="images/265d2766-d948-48a2-8f40-2bc3d3575b02.jpg" alt="">
+                            <img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/265d2766-d948-48a2-8f40-2bc3d3575b02.jpg" alt="">
                         </div>
                     </div>
                     <div class="floor_zhong">
                         <div class="cata">
-                            <img src="images/b5108bb9-e35a-4c93-908a-8ca1a552c0c7.jpg" alt="">
+                            <img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/b5108bb9-e35a-4c93-908a-8ca1a552c0c7.jpg" alt="">
                         </div>
 
                     </div>
@@ -357,12 +357,12 @@
                     </div>
                     <div class="floor_left">
                         <div class="cata">
-                            <img src="images/265d2766-d948-48a2-8f40-2bc3d3575b02.jpg" alt="">
+                            <img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/265d2766-d948-48a2-8f40-2bc3d3575b02.jpg" alt="">
                         </div>
                     </div>
                     <div class="floor_zhong">
                         <div class="cata">
-                            <img src="images/b5108bb9-e35a-4c93-908a-8ca1a552c0c7.jpg" alt="">
+                            <img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/b5108bb9-e35a-4c93-908a-8ca1a552c0c7.jpg" alt="">
                         </div>
 
                     </div>
@@ -394,12 +394,12 @@
                     </div>
                     <div class="floor_left">
                         <div class="cata">
-                            <img src="images/265d2766-d948-48a2-8f40-2bc3d3575b02.jpg" alt="">
+                            <img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/265d2766-d948-48a2-8f40-2bc3d3575b02.jpg" alt="">
                         </div>
                     </div>
                     <div class="floor_zhong">
                         <div class="cata">
-                            <img src="images/b5108bb9-e35a-4c93-908a-8ca1a552c0c7.jpg" alt="">
+                            <img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/9/27/b5108bb9-e35a-4c93-908a-8ca1a552c0c7.jpg" alt="">
                         </div>
 
                     </div>
@@ -421,10 +421,10 @@
                         <img src="images/boss.png" alt="">
                     </div>
                     <ul>
-                        <li><img src="images/d31fdb2b-d299-4a2c-afca-a02fcc3de0c4.png" alt="" title="正品保证"></li>
-                        <li><img src="images/20ea3c57-6b74-4b03-8c66-b069c1853abb.png" alt="" title="七天无理由退换"></li>
-                        <li><img src="images/16adc0c5-d075-4cd5-8661-8efc54dad2b5.png" alt="" title="送货到家"></li>
-                        <li><img src="images/8dc037c6-cec1-4aad-8383-fddc6f14dd65.png" alt="" title="售后无忧"></li>
+                        <li><img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2018/8/12/d31fdb2b-d299-4a2c-afca-a02fcc3de0c4.png" alt="" title="正品保证"></li>
+                        <li><img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2018/8/12/20ea3c57-6b74-4b03-8c66-b069c1853abb.png" alt="" title="七天无理由退换"></li>
+                        <li><img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/3/30/16adc0c5-d075-4cd5-8661-8efc54dad2b5.png" alt="" title="送货到家"></li>
+                        <li><img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2018/8/12/8dc037c6-cec1-4aad-8383-fddc6f14dd65.png" alt="" title="售后无忧"></li>
                     </ul>
                 </div>
 
