--- a/src/detail.html
+++ b/src/detail.html
@@ -50,7 +50,7 @@
     <div class="header">
         <!--logo-->
         <div class="header-logo">
-            <img src="images/86f141a8-3876-4568-86f0-3c343430775c.gif" title="格力董明珠店">
+            <img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/4/2/86f141a8-3876-4568-86f0-3c343430775c.gif" title="格力董明珠店">
         </div>
         <!--搜索框图标-->
         <div class="header-select">
