--- a/src/login.html
+++ b/src/login.html
@@ -19,7 +19,7 @@
     <!--头部-->
     <div class="header">
         <div class="logo">
-            <img src="images/86f141a8-3876-4568-86f0-3c343430775c.gif" alt="">
+            <img src="https://gelimall.oss-cn-shenzhen.aliyuncs.com/album/2020/4/2/86f141a8-3876-4568-86f0-3c343430775c.gif" alt="">
         </div>
         <div class="rightimg">
             <p class="hy"><i>|</i>欢迎登录</p>
